feat(dashboard): create dashboard user endpoin
